refactor: restructure adding of secondary start blocks
Having to add secondary start blocks is a side-effect from the fact that one of our branches contains the start block. When reading the code it makes more sense to do this in the block where we perform specific behaviour in case we are in this scenario.